<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/bottomsheet_shape"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/delete_note"
        android:textColor="@color/black"
        android:layout_marginVertical="5dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/is_delete_note"
        android:layout_marginVertical="5dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="130dp"
                android:layout_height="55dp"
                app:cornerRadius="20dp"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/white_bg"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textAllCaps="false" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/purple_bg"
                android:text="@string/delete"
                android:textAllCaps="false"
                tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>


</LinearLayout>