<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CreateNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/yellow"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_backspace" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/create_note"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/btn_create"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_check" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/poppins_bold"
            android:hint="@string/note_name"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/start_typing"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="500"
            android:textColor="@color/black"
            android:gravity="top|start"
            android:textSize="18sp"
            tools:ignore="Autofill" />

    </LinearLayout>

</LinearLayout>